# project_options

.github/workflows/: ci.cross.mingw.yml
src/: Index.cmake
test/: CMakeLists.txt
test/libs/: CMakeLists.txt
test/libs/mylibexample/: CMakeLists.txt
test/libs/mylibexample/include/: simple_lib.h  simple_lib.hpp
test/libs/mylibexample/src/: simple_lib.c  simple_lib.cpp
